Updated database to acommidate new sorting feature and fixed bug where server errors would cause account sidebar to overflow

--- a/client/src/CSS/scss_partials/home/account/_accountSidebar.scss
+++ b/client/src/CSS/scss_partials/home/account/_accountSidebar.scss
@@ -19,7 +19,7 @@
 		border-top: none;
 		border-right: none;
 		background: v.$mode-account-sidebar-modal-background-color-light;
-		height: 402px;
+		height: 425px;
 		width: v.$account-sidebar-width;
 		text-align: left;
 		font-family: Arial, Helvetica, sans-serif;
