--- a/client/src/CSS/styles.css
+++ b/client/src/CSS/styles.css
@@ -611,7 +611,7 @@ dropdown can overlap all other components
   border-top: none;
   border-right: none;
   background: white;
-  height: 402px;
+  height: 425px;
   width: 430px;
   text-align: left;
   font-family: Arial, Helvetica, sans-serif;
